# OpenAI-Agents-SDK

./: README.md
agent-as-tool/: pyproject.toml  streeming.py
basic-agent/: .env  main.py  pyproject.toml
basic-agent/src/basic_agent/: __init__.py
first_agent/: README.md  pyproject.toml
first_agent/src/first_agent/: __init__.py  main.py
hands-off/: handsoff.py  pyproject.toml
multi-agents-proj1/: pyproject.toml
multi-agents-proj1/src/multi_agents_proj1/: __init__.py
myfirst-agent/: .env  .gitignore  handsoff.py  main.py  pyproject.toml
myfirst-agent/src/myfirst_agent/: __init__.py
streeming/: README.md  streeming.py
tool-calling/: main.py  pyproject.toml
with_lite_llm/: .env  pyproject.toml
with_lite_llm/src/with_lite_llm/: __init__.py
