[project]
name = "basic-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Asif", email = "programmerasif@outlook.com" }
]

requires-python = ">=3.11"
dependencies = [
    "openai-agents[litellm]>=0.0.13",
]

[project.scripts]
basic-agent = "basic_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
