[project]
name = "tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Asif", email = "programmerasif@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.6",
    "openai-agents>=0.0.17",
]

[project.scripts]
tool-calling = "tool_calling:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
